update to main page and link text decoration

--- a/assets/stylus/components/dropdown.styl
+++ b/assets/stylus/components/dropdown.styl
@@ -12,6 +12,7 @@
     transition: visibility 0s linear $transition-base, opacity $transition-base linear
     
     > a
+        text-decoration none
         display block
         font-size $font-size-large
         padding $spacing-base $spacing-large
