--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -12,12 +12,12 @@ $gray-darker                   = #323232
 
 
 //Brand Colours
-$brand-primary                 = #607848
-$brand-secondary               = #789048
-$brand-tertiary                = #C0D860
-$brand-wildcard                = #604848
-$brand-background              = #F0F0D8
-$brand-action                  = $brand-wildcard
+$brand-primary                 = #EB613B
+$brand-secondary               = #F98F6F
+$brand-tertiary                = #C1D9CD
+$brand-wildcard                = #4D3B36
+$brand-background              = #F7EADC
+$brand-action                  = #4485A4
 $brand-success                 = #90BE51
 $brand-danger                  = #F6664B
 $brand-warning                 = #F0E14B
@@ -116,7 +116,7 @@ $rule-margin-top               = $spacing-large
 $rule-margin-bottom            = $spacing-large
 $rule-border-width             = $border-width-base
 $rule-border-type              = solid
-$rule-border-color             = $gray-light
+$rule-border-color             = $gray
 
 
 //Description List
