--- a/assets/stylus/components/main-nav.styl
+++ b/assets/stylus/components/main-nav.styl
@@ -34,6 +34,7 @@
 
         > a
         > .dropdown-container > a
+            text-decoration none
             flex-shrink 0
             position relative
             font-size $font-size-large
