add some image styling

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -23,6 +23,7 @@ body
     font-weight $body-font-weight
 
 @import 'elements/logo.styl'
+@import 'elements/image.styl'
 @import 'elements/anchor.styl'
 @import 'elements/headings.styl'
 @import 'elements/horizontal-rule.styl'
