add image styl file and update default variables

--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -12,12 +12,12 @@ $gray-darker                   = #323232
 
 
 //Brand Colours
-$brand-primary                 = #EB613B
-$brand-secondary               = #F98F6F
-$brand-tertiary                = #C1D9CD
-$brand-wildcard                = #4D3B36
-$brand-background              = #F7EADC
-$brand-action                  = #4485A4
+$brand-primary                 = #215A6D
+$brand-secondary               = #3CA2A2
+$brand-tertiary                = #92C7A3
+$brand-wildcard                = #2D2D29
+$brand-background              = #DFECE6
+$brand-action                  = $brand-tertiary
 $brand-success                 = #90BE51
 $brand-danger                  = #F6664B
 $brand-warning                 = #F0E14B
