--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -17,7 +17,7 @@ $brand-secondary               = #3CA2A2
 $brand-tertiary                = #92C7A3
 $brand-wildcard                = #2D2D29
 $brand-background              = #DFECE6
-$brand-action                  = $brand-tertiary
+$brand-action                  = $brand-secondary
 $brand-success                 = #90BE51
 $brand-danger                  = #F6664B
 $brand-warning                 = #F0E14B
@@ -35,12 +35,13 @@ $font-size                     = 16px
 $font-size-base                = 1rem
 $font-size-large               = 1.25rem
 $font-size-small               = 0.875rem
-$font-face-sans                = Arial, Helvetica, sans-serif
+$font-face-sans                = "Arial", Helvetica, sans-serif
 $font-face-serif               = Georgia, serif
 $font-face-mono                = "Courier New", Courier, monospace
 $font-weight-base              = normal
 $font-weight-bold              = bold
 $line-height                   = 1.5
+
 
 //Responsive breakpoints
 $breakpoint-xs                 = 0
@@ -89,6 +90,7 @@ $body-font-size                = $font-size-base
 $body-line-height              = $line-height
 $body-font-weight              = $font-weight-base
 
+
 //Anchor
 $link-color                    = $brand-action
 $link-decoration               = none
@@ -131,8 +133,8 @@ $dt-margin                     = 0
 $dt-font-weight                = $font-weight-bold
 $dt-padding                    = 0
 
-//Ordered List
 
+//Ordered List
 $ol-padding                    = 0 0 0 $spacing-xl
 $ol-margin                     = 0 0 $spacing-base
 $ol-style                      = decimal outside
@@ -144,8 +146,8 @@ $ol-child-style                = lower-alpha outside
 $ol-li-padding                 = 0
 $ol-li-margin                  = 0
 
-//Unordered List
 
+//Unordered List
 $ul-padding                    = 0 0 0 $spacing-xl
 $ul-margin                     = 0 0 $spacing-base
 $ul-style                      = bullet outside
@@ -162,6 +164,7 @@ $ul-li-margin                  = 0
 $pre-background                = $brand-wildcard
 $pre-color                     = $white
 $pre-radius                    = $radius-base
+
 
 //Inputs
 $input-height                  = 2.625rem
@@ -183,7 +186,7 @@ $input-border-color-focus      = $brand-action
 $input-box-shadow-focus        = none
 $input-background-color-focus  = $white
 
-$input-border-color-error  = $brand-danger
+$input-border-color-error      = $brand-danger
 $input-box-shadow-error        = none
 $input-background-color-error  = $white
 
@@ -214,6 +217,7 @@ $button-shadow                 = none
 //Grid setup
 $grid-columns                  = 12
 $grid-padding                  = $spacing-base
+
 
 //Main Nav
 $main-nav-background           = $brand-secondary
