--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,35 +1,33 @@
-$font-size-base:     16px;
-$spacer:             1rem;
-$backgroundGradient: linear-gradient(
-    135deg,
-    rgba(255, 255, 196, 1.000) 0.000%,
-    rgba(255, 97, 100, 1.000) 50.000%,
-    rgba(176, 0, 18, 1.000) 100.000%
-);
-
-html {
-    font-size: $font-size-base;
+html, body {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0 $spacer;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #000000;
-    color: #FFFFFF;
-    font-family: "KoHo", sans-serif;
-    font-weight: 700;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
     font-style: normal;
+    background: rgb(240,240,240);
+    padding: 1rem;
 }
 
-.hello {
-    margin: $spacer 0;
-    font-size: clamp(#{$spacer * 3}, 20vw, #{$spacer * 30});
-    background: $backgroundGradient;
-    background-clip: text;
-    color: transparent;
+.card {
+    background: #FFFFFF;
+    box-shadow: rgba(10, 10, 10, 0.06) 0px 1.2px 1.2px 0px, rgba(10, 10, 10, 0.04) 0px 5px 10px 0px;
+    padding: 2rem;
+    border-radius: 1.5rem;
+    width: 100%;
+    max-width: 560px;
+    
+    h1 {
+        margin: 0 0 1rem;
+    }
 }
