--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,15 @@
 ---
+import {
+    Card,
+    Col,
+    Container,
+    Row
+} from 'react-bootstrap';
 import '../styles/styles.scss';
 import CopyButton from '../components/CopyButton';
+
+const name = "Leo Rimmer";
+const role = "Visual/product designer and front-end developer";
 ---
 
 <html lang="en">
@@ -9,19 +18,26 @@ import CopyButton from '../components/CopyButton';
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-        <title>Rimmer.co</title>
+        <title>{name} · {role}</title>
     </head>
     <style>
     </style>
     <body>
-        <div class="card">
-            <h1>Leo Rimmer</h1>
-            <p>Visual/product designer and front-end developer</p>
-            <p>Currently working at <a href="https://petdirect.co.nz/">Petdirect</a></p>
-            <CopyButton client:load />
-        </div>
+        <Container>
+            <Row>
+                <Col xs={12} lg={{offset: 3, span: 6}}>
+                    <Card>
+                        <Card.Body>
+                            <Card.Title>{name}</Card.Title>
+                            <p>
+                                {role}.
+                                Currently working at <a href="https://petdirect.co.nz/">Petdirect</a>.
+                            </p>
+                            <CopyButton client:load />
+                        </Card.Body>
+                    </Card>
+                </Col>
+            </Row>
+        </Container>
     </body>
 </html>
