--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,5 +31,5 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #F7F7F7;
+    background: var(--#{$prefix}secondary-bg);
 }
