--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,11 +25,51 @@ $btn-close-bg:     url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/sv
 @import "bootstrap/scss/offcanvas";
 @import "bootstrap/scss/toasts";
 
+:root {
+    --gradient-part-1: radial-gradient(
+        at 44% 0%,
+        rgba(255,184,122,.4) 0px,
+        transparent 50%
+    );
+    --gradient-part-2: radial-gradient(
+        at 80% 0%,
+        rgba(31,221,255,.1) 0px,
+        transparent 50%
+    );
+    --gradient-part-3: radial-gradient(
+        at 80% 50%,
+        rgba(255,133,173,.1) 0px,
+        transparent 50%
+    );
+    --gradient-part-4: radial-gradient(
+        at 0% 100%,
+        rgba(255,181,138,0) 0px,
+        transparent 50%
+    );
+    --gradient-part-5: radial-gradient(
+        at 80% 100%,
+        rgba(107,102,255,0) 0px,
+        transparent 50%
+    );
+    --gradient-part-6: radial-gradient(
+        at 0% 0%,
+        rgba(255,133,167,.25) 0px,
+        transparent 50%
+    );
+    --background-gradient:
+        var(--gradient-part-1),
+        var(--gradient-part-2),
+        var(--gradient-part-3),
+        var(--gradient-part-4),
+        var(--gradient-part-5),
+        var(--gradient-part-6)
+}
+
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: var(--#{$prefix}secondary-bg);
+    background-image: var(--background-gradient);
 }
