setup bootstrap styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import '../styles/styles.scss';
 import CopyButton from '../components/CopyButton';
 import Credits from '../components/Credits';
 
-const name = "Leo Rimmer";
-const role = "Visual/product designer and front-end developer";
+const name: string = "Leo Rimmer";
+const role: string = "Visual/product designer and front-end developer";
 ---
 
 <html lang="en">
