--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,69 +1,4 @@
-$prefix: 'lr-';
-
-$btn-close-color: #000000;
-$btn-close-width:  24px;
-$btn-close-bg:     url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='#{$btn-close-color}'><path d='M11.9997 10.5865L16.9495 5.63672L18.3637 7.05093L13.4139 12.0007L18.3637 16.9504L16.9495 18.3646L11.9997 13.4149L7.04996 18.3646L5.63574 16.9504L10.5855 12.0007L5.63574 7.05093L7.04996 5.63672L11.9997 10.5865Z'></path></svg>");
-
-@import "bootstrap/scss/functions";
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/variables-dark";
-@import "bootstrap/scss/maps";
-@import "bootstrap/scss/mixins";
-@import "bootstrap/scss/root";
-@import "bootstrap/scss/utilities";
-@import "bootstrap/scss/reboot";
-@import "bootstrap/scss/type";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/containers";
-@import "bootstrap/scss/grid";
-@import "bootstrap/scss/helpers";
-@import "bootstrap/scss/utilities/api";
-@import "bootstrap/scss/transitions";
-@import "bootstrap/scss/buttons";
-@import "bootstrap/scss/card";
-@import "bootstrap/scss/close";
-@import "bootstrap/scss/offcanvas";
-@import "bootstrap/scss/toasts";
-
-:root {
-    --gradient-part-1: radial-gradient(
-        at 44% 0%,
-        rgba(255,184,122,.4) 0px,
-        transparent 50%
-    );
-    --gradient-part-2: radial-gradient(
-        at 80% 0%,
-        rgba(31,221,255,.1) 0px,
-        transparent 50%
-    );
-    --gradient-part-3: radial-gradient(
-        at 80% 50%,
-        rgba(255,133,173,.1) 0px,
-        transparent 50%
-    );
-    --gradient-part-4: radial-gradient(
-        at 0% 100%,
-        rgba(255,181,138,0) 0px,
-        transparent 50%
-    );
-    --gradient-part-5: radial-gradient(
-        at 80% 100%,
-        rgba(107,102,255,0) 0px,
-        transparent 50%
-    );
-    --gradient-part-6: radial-gradient(
-        at 0% 0%,
-        rgba(255,133,167,.25) 0px,
-        transparent 50%
-    );
-    --background-gradient:
-        var(--gradient-part-1),
-        var(--gradient-part-2),
-        var(--gradient-part-3),
-        var(--gradient-part-4),
-        var(--gradient-part-5),
-        var(--gradient-part-6)
-}
+@import "bootstrap";
 
 body {
     min-height: 100vh;
@@ -71,5 +6,4 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: var(--background-gradient);
 }
