--- a/src/styles/bootstrap/_custom.scss
+++ b/src/styles/bootstrap/_custom.scss
@@ -44,6 +44,11 @@ $prefix: 'lr-';
 $link-color: $primary;
 
 
+// Typography
+
+$font-family-sans-serif: "Inter", sans-serif;
+
+
 // Close
 
 $btn-close-color: #000000;
