--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,31 @@
 @import "bootstrap";
 
 body {
+    font-optical-sizing: auto;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+    > header {
+        padding: $spacer;
+        flex: 0 0 auto;
+        width: 100%;
+    }
+    
+    > main {
+        width: 100%;
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    
+    > footer {
+        width: 100%;
+        padding: $spacer;
+        flex: 0 0 auto;
+    }
 }
