--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const role: string = "Visual/product designer and front-end developer";
                     <RiExternalLinkLine />
                 </Stack>.
             </p>
-            <CopyButton client:load />
+            <CopyButton size="lg" client:load />
         </Col>
     </Row>
 </Base>
