--- a/src/styles/bootstrap/extend/_buttons.scss
+++ b/src/styles/bootstrap/extend/_buttons.scss
@@ -4,6 +4,7 @@ $btn-padding-x-lg:     $spacer * 2;
 $btn-font-weight:       $font-weight-bold;
 $btn-font-size-lg:      $font-size-base;
 $btn-line-height:       calc(24/18);
+$btn-disabled-opacity:  .65;
 
 $btn-border-width:      0;
 
@@ -15,7 +16,29 @@ $btn-box-shadow:        var(--#{$prefix}btn-shadow-one-spread) rgba($black, var(
 $btn-focus-box-shadow:  $btn-box-shadow;
 $btn-active-box-shadow: $btn-box-shadow;
 
+$btn-transition-timing-function:  ease-in-out; 
+$btn-transition-time:             .25s;
+$btn-transition:                  transform $btn-transition-time $btn-transition-timing-function,
+								  background $btn-transition-time $btn-transition-timing-function,
+								  color $btn-transition-time $btn-transition-timing-function,
+								  box-shadow $btn-transition-time $btn-transition-timing-function;
+
+$btn-hover-bg-shade-amount:       0%;
+$btn-hover-bg-tint-amount:        0%;
+$btn-hover-border-shade-amount:   0%;
+$btn-hover-border-tint-amount:    0%;
+$btn-active-bg-shade-amount:      0%;
+$btn-active-bg-tint-amount:       0%;
+$btn-active-border-shade-amount:  0%;
+$btn-active-border-tint-amount:   0%;
+
 @import "bootstrap/scss/buttons";
+
+@property --rotation {
+	syntax: "<angle>";
+	inherits: false;
+	initial-value: 191deg;
+}
 
 .btn {
 	--#{$prefix}btn-shadow-one-spread: 0 2px 8px 0;
@@ -27,23 +50,59 @@ $btn-active-box-shadow: $btn-box-shadow;
 	--#{$prefix}btn-inner-shadow-color: #{$white};
 	--#{$prefix}btn-inner-shadow-spread: 0 0 24px 0;
 	--#{$prefix}btn-inner-shadow-opacity: 0.4;
-	--#{$prefix}btn-icon-color: hsl(from var(--#{$prefix}btn-color) h s l / .6);
-	--#{$prefix}btn-border-color: red;
 	position: relative;
 	border-color: transparent;
 	
-	&:hover {
+	&:disabled,
+	&.disabled {
+		box-shadow: $btn-box-shadow;
+		opacity: 1;
+		background: hsl(from var(--#{$prefix}btn-bg) h s l / #{$btn-disabled-opacity});
+		color: hsl(from var(--#{$prefix}btn-color) h s l / #{$btn-disabled-opacity});
+	}
+
+	&:disabled,
+	&:active,
+	&.disabled
+	&.active {
 		--#{$prefix}btn-shadow-one-spread: 0 1px 4px 0;
 		--#{$prefix}btn-shadow-one-opacity: 0.48;
 		--#{$prefix}btn-shadow-two-spread: 0 0 12px 0;
 		--#{$prefix}btn-shadow-two-opacity: 0.32;
 		--#{$prefix}btn-glow-opacity: 0.48;
 		--#{$prefix}btn-glow-spread: 0 8px 16px 0;
+		--#{$prefix}btn-inner-shadow-color: #{$black};
+		--#{$prefix}btn-inner-shadow-opacity: 0.2;
 		--#{$prefix}btn-icon-color: var(--#{$prefix}btn-color);
+		
+		&::before {
+			--rotation: initial;
+		}
 	}
 	
-	&::before,
-	&::after {
+	&:not(:disabled),
+	&:not(.disabled) {
+		
+		&:hover {
+			--#{$prefix}btn-shadow-one-spread: 0 4px 12px 0;
+			--#{$prefix}btn-shadow-two-spread: 0 0 16px 0;
+			--#{$prefix}btn-glow-spread: 0 12px 24px 0;
+			--#{$prefix}btn-glow-opacity: 0.32;
+			--#{$prefix}btn-inner-shadow-opacity: 0.64;
+			transform: translate3d(0,-1px,0);
+			
+			&::before {
+				--rotation: 169deg;
+			}
+		}
+		
+		&:active,
+		.active {
+			transform: translate3d(0,1px,0);
+		}
+	}
+	
+	&::before {
 		content: "";
 		position: absolute;
 		top: 0;
@@ -51,23 +110,13 @@ $btn-active-box-shadow: $btn-box-shadow;
 		height: 100%;
 		width: 100%;
 		border-radius: var(--#{$prefix}btn-border-radius);
+		background: linear-gradient(var(--rotation), rgba($white, 0.00) 0%, $white 50%, rgba($white, 0.00) 100%) border-box;
 		border: 2px solid transparent;
 		mask: /* mask inside the button */
-			linear-gradient(#000 0 0) padding-box, 
-			linear-gradient(#000 0 0);
+			linear-gradient($black 0 0) padding-box, 
+			linear-gradient($black 0 0);
 		mask-composite: exclude;
 		mix-blend-mode: overlay;
-	}
-	
-	&::before {
-		background: linear-gradient(135deg, rgba(255,255,255,0.80) 0%, rgba(255,255,255,0.00) 25%) border-box;
-	}
-	
-	&::after {
-		background: linear-gradient(-45deg, rgba(255,255,255,0.80) 0%, rgba(255,255,255,0.00) 25%) border-box;
-	}
-	
-	.remixicon {
-		color: var(--#{$prefix}btn-icon-color);
+		transition: --rotation .5s;
 	}
 }
