transition button content

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "components";
 
 body {
     font-optical-sizing: auto;
@@ -29,3 +30,4 @@ body {
         flex: 0 0 auto;
     }
 }
+
