--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -8,7 +8,7 @@ import '../styles/styles.scss';
 const { title } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" data-bs-theme="light">
     <head>
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
