--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,9 @@ const role: string = "Visual/product designer and front-end developer";
             xs={12}
             md={{offset: 2, span: 8}}
             lg={{offset: 3, span: 6}}
-            xl={{offset: 4, span: 4}}
         >
-            <h1>{name}</h1>
-            <p>
+            <h1 class="display-1">{name}</h1>
+            <p class="lead">
                 {role}.
                 Currently working at
                 <Stack
