--- a/src/styles/bootstrap/extend/_buttons.scss
+++ b/src/styles/bootstrap/extend/_buttons.scss
@@ -2,7 +2,7 @@ $btn-padding-y-lg:      $spacer;
 $btn-padding-x-lg:      $spacer * 2;
 
 $btn-font-weight:       $font-weight-bold;
-$btn-font-size-lg:      $font-size-base;
+$btn-font-size-lg:      $font-size-base * 1.125;
 $btn-line-height:       calc(24/18);
 $btn-disabled-opacity:  .6;
 
