--- a/src/styles/bootstrap/_custom.scss
+++ b/src/styles/bootstrap/_custom.scss
@@ -1,7 +1,7 @@
 // Color system
 
 $white:    #FFFFFF;
-$gray:     darken($white, 50%);
+$gray:     #847D91;
 $gray-100: lighten($gray, 40%);
 $gray-200: lighten($gray, 30%);
 $gray-300: lighten($gray, 20%);
