--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const role: string = "Visual/product designer and front-end developer";
         >
             <h1 class="display-5">{name}</h1>
             <p class="lead">
-                {role}.
+                {role}.<br>
                 Currently working at
                 <Stack
                     className="d-inline-flex"
