--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import ThemeSwitcher from './ThemeSwitcher';
 ---
 
 <header>
-    <Container>
+    <Container className="d-flex justify-content-between">
         <Button variant="link" href="/">LR</Button>
         <ThemeSwitcher client:load />
     </Container>
