--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -6,5 +6,13 @@
 	
 	.lead {
 		margin: 0 0 $spacer * 2;
+		
+		a {
+			font-weight: $font-weight-semibold;
+			
+			.remixicon {
+				color: var(--#{$prefix}border-color);
+			}
+		}
 	}
 }
