--- a/src/styles/bootstrap/extend/_buttons.scss
+++ b/src/styles/bootstrap/extend/_buttons.scss
@@ -19,6 +19,9 @@ $btn-box-shadow:        var(--#{$prefix}btn-shadow-one-spread) rgba($black, var(
 $btn-focus-box-shadow:  $btn-box-shadow;
 $btn-active-box-shadow: $btn-box-shadow;
 
+$btn-border-radius:               var(--#{$prefix}border-radius-pill);
+$btn-border-radius-lg:            var(--#{$prefix}border-radius-lg);
+
 $btn-transition-timing-function:  ease-in-out; 
 $btn-transition-time:             .25s;
 $btn-transition:                  transform $btn-transition-time $btn-transition-timing-function,
@@ -43,28 +46,6 @@ $btn-active-border-tint-amount:   0%;
 	initial-value: 191deg;
 }
 
-.btn:not(.btn-link) {
-	position: relative;
-	
-	&::before {
-		content: "";
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		border-radius: var(--#{$prefix}btn-border-radius);
-		background: linear-gradient(var(--rotation), rgba($white, 0.00) 0%, $white 50%, rgba($white, 0.00) 100%) border-box;
-		border: var(--#{$prefix}btn-border-width) solid transparent;
-		mask: /* mask inside the button */
-			linear-gradient($black 0 0) padding-box, 
-			linear-gradient($black 0 0);
-		mask-composite: exclude;
-		mix-blend-mode: overlay;
-		transition: --rotation $btn-transition-time $btn-transition-timing-function;
-	}
-}
-
 @each $color, $value in $theme-colors {
 	
 	.btn-#{$color} {
@@ -77,11 +58,37 @@ $btn-active-border-tint-amount:   0%;
 		--#{$prefix}btn-inner-shadow-color: #{$white};
 		--#{$prefix}btn-inner-shadow-spread: 0 0 24px 0;
 		--#{$prefix}btn-inner-shadow-opacity: 0.4;
+		--#{$prefix}btn-shine-color: #{$white};
+		--#{$prefix}btn-shine-color-transparent: hsl(from var(--#{$prefix}btn-shine-color) h s l / 0);
 		border-width: 0;
 		border-color: transparent;
+		position: relative;
 		
-		&-lg {
+		&.btn-lg {
 			--#{$prefix}btn-border-width: #{map-get($border-widths, 2)};
+		}
+		
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			border-radius: var(--#{$prefix}btn-border-radius);
+			background: linear-gradient(
+				var(--rotation),
+				var(--#{$prefix}btn-shine-color-transparent) 0%,
+				var(--#{$prefix}btn-shine-color) 50%,
+				var(--#{$prefix}btn-shine-color-transparent) 100%
+			) border-box;
+			border: var(--#{$prefix}btn-border-width) solid transparent;
+			mask: /* mask inside the button */
+				linear-gradient($black 0 0) padding-box, 
+				linear-gradient($black 0 0);
+			mask-composite: exclude;
+			transition: --rotation $btn-transition-time $btn-transition-timing-function;
+			mix-blend-mode: overlay;
 		}
 		
 		&:disabled,
@@ -90,6 +97,10 @@ $btn-active-border-tint-amount:   0%;
 			opacity: 1;
 			background: hsl(from var(--#{$prefix}btn-bg) h s l / #{$btn-disabled-opacity});
 			color: hsl(from var(--#{$prefix}btn-color) h s l / #{$btn-disabled-opacity});
+			
+			&::before {
+				--rotation: initial;
+			}
 		}
 		
 		&:disabled,
@@ -105,10 +116,6 @@ $btn-active-border-tint-amount:   0%;
 			--#{$prefix}btn-inner-shadow-color: #{$black};
 			--#{$prefix}btn-inner-shadow-opacity: 0.2;
 			--#{$prefix}btn-icon-color: var(--#{$prefix}btn-color);
-			
-			&::before {
-				--rotation: initial;
-			}
 		}
 		
 		&:not(:disabled),
