--- a/src/styles/bootstrap/index.scss
+++ b/src/styles/bootstrap/index.scss
@@ -1,4 +1,3 @@
-// Custom theme
 @import "custom";
 
 // Bootstrap styles
@@ -16,6 +15,9 @@
 @import "bootstrap/scss/grid";
 @import "bootstrap/scss/helpers";
 @import "bootstrap/scss/utilities/api";
+
+// Custom variables
+@import "window";
 
 // Extended Bootstrap styles
 @import "extend";
