--- a/src/styles/bootstrap/extend/_dropdown.scss
+++ b/src/styles/bootstrap/extend/_dropdown.scss
@@ -1,1 +1,27 @@
+$dropdown-min-width:                $spacer * 15;
+$dropdown-padding-x:                $spacer * .5;
+$dropdown-padding-y:                $spacer;
+$dropdown-spacer:                   $spacer * .25;
+$dropdown-bg:                       $window-bg;
+$dropdown-border-color:             $window-border-color;
+$dropdown-border-radius:            $window-border-radius;
+$dropdown-border-width:             $window-border-width;
+$dropdown-inner-border-radius:      $window-inner-border-radius;
+$dropdown-box-shadow:               $widow-box-shadow;
+
+$dropdown-item-padding-y:           $spacer * .5;
+$dropdown-item-padding-x:           $spacer;
+
 @import "bootstrap/scss/dropdown";
+
+.dropdown-menu {
+	--#{$prefix}dropdown-item-border-radius: #{$border-radius};
+	backdrop-filter: $widow-backdrop-filter;
+	flex-direction: column;
+	gap: $spacer * .25;
+	@include windowShine();
+	
+	&.show {
+		display: flex;
+	}
+}
