--- a/src/styles/bootstrap/extend/_offcanvas.scss
+++ b/src/styles/bootstrap/extend/_offcanvas.scss
@@ -1,1 +1,13 @@
+$offcanvas-border-color:            $window-border-width;
+$offcanvas-border-width:            $window-border-color;
+$offcanvas-bg-color:                $window-bg;
+$offcanvas-box-shadow:              $widow-box-shadow;
+
 @import "bootstrap/scss/offcanvas";
+
+.offcanvas {
+	backdrop-filter: $widow-backdrop-filter;
+	margin: $spacer;
+	border-radius: $window-border-radius;
+	@include windowShine();
+}
