improve theme switcher

--- a/src/styles/bootstrap/extend/_dropdown.scss
+++ b/src/styles/bootstrap/extend/_dropdown.scss
@@ -1,6 +1,6 @@
 $dropdown-min-width:                $spacer * 15;
 $dropdown-padding-x:                $spacer * .5;
-$dropdown-padding-y:                $spacer;
+$dropdown-padding-y:                $spacer * .5;
 $dropdown-spacer:                   $spacer * .25;
 $dropdown-bg:                       $window-bg;
 $dropdown-border-color:             $window-border-color;
