--- a/src/styles/bootstrap/_window.scss
+++ b/src/styles/bootstrap/_window.scss
@@ -7,17 +7,19 @@ $widow-box-shadow:           var(--#{$prefix}window-box-shadow);
 $widow-backdrop-filter:      blur(3px);
 
 :root {
-	--#{$prefix}window-bg:           hsl(from var(--#{$prefix}gray-100) h s l / .6);
-	--#{$prefix}window-border-color: var(--#{$prefix}gray-300);
-	--#{$prefix}window-box-shadow:   0 2px 8px 0 rgba(0,0,0,0.20), 0 0 24px 0 rgba(0,0,0,0.12), inset 0 0 24px 0 rgba(255,255,255,0.80), inset 0 0 0 var(--#{$prefix}border-width) var(--#{$prefix}window-border-color);
-	--#{$prefix}window-shine-color:  var(--#{$prefix}black-rgb);
+	--#{$prefix}window-bg:           hsl(from var(--#{$prefix}gray-400) h s l / .6);
+	--#{$prefix}window-border-color: var(--#{$prefix}gray-400);
+	--#{$prefix}window-box-shadow:   0 0 8px 0 rgba(0,0,0,0.24), 0 0 24px 0 rgba(0,0,0,0.12), inset 0 0 24px 0 rgba(255,255,255,0.80), inset 0 0 0 var(--#{$prefix}border-width) var(--#{$prefix}window-border-color);
+	--#{$prefix}window-shine-color:  var(--#{$prefix}white-rgb);
+	--#{$prefix}window-shineopacity: .64;
 }
 
 @include color-mode(dark) {
 	--#{$prefix}window-bg:           hsl(from var(--#{$prefix}gray-800) h s l / .6);
 	--#{$prefix}window-border-color: var(--#{$prefix}gray-800);
-	--#{$prefix}window-box-shadow:   0 2px 8px 0 rgba(0,0,0,0.48), 0 0 24px 0 rgba(0,0,0,0.24), inset 0 0 24px 0 rgba(255,255,255,0.08), inset 0 0 0 var(--#{$prefix}border-width) var(--#{$prefix}window-border-color);
+	--#{$prefix}window-box-shadow:   0 0 8px 0 rgba(0,0,0,0.48), 0 0 24px 0 rgba(0,0,0,0.24), inset 0 0 24px 0 rgba(255,255,255,0.08), inset 0 0 0 var(--#{$prefix}border-width) var(--#{$prefix}window-border-color);
 	--#{$prefix}window-shine-color:  var(--#{$prefix}white-rgb);
+	--#{$prefix}window-shine-opacity: .24;
 }
 
 @mixin windowShine() {
@@ -38,11 +40,11 @@ $widow-backdrop-filter:      blur(3px);
 			rgb(var(--#{$prefix}window-shine-color)) 100%
 		) border-box;
 		border: 1px solid transparent;
-		mask: /* mask inside the button */
+		mask: /* mask inside */
 			linear-gradient($black 0 0) padding-box, 
 			linear-gradient($black 0 0);
 		mask-composite: exclude;
-		opacity: .24;
+		opacity: var(--#{$prefix}window-shine-opacity);
 		pointer-events: none;
 	}
 }
